--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,3 +1,4 @@
 @import "./historyPage/historyList";
 @import "./historyPage/historyTable";
 @import "./historyPage/historyTableItem";
+@import "./historyPage/pagination";
