--- a/src/scss/historyPage/_historyList.scss
+++ b/src/scss/historyPage/_historyList.scss
@@ -17,6 +17,24 @@
     padding: 4px;
     border: #000 solid;
   }
+
+  .history-filtred-wrapper{
+    position: relative;
+  }
+
+  .history-filtred-item{
+    opacity: 0;
+    font-size: 15px;
+    transition: 0.2s all;
+    z-index: -1;
+    &.active{
+      opacity: 1;
+      margin-right: 15px;
+      &.selected{
+        background: #c0c0c0;
+      }
+    }
+  }
   
   .history-add-op img{
     height: 25px;
