--- a/src/app/components/ui/userLoginComp/form.scss
+++ b/src/app/components/ui/userLoginComp/form.scss
@@ -23,3 +23,12 @@ h1 {
         background-color: rgb(164, 164, 164);
     }
 }
+
+.login-from-action{
+    margin-top: 20px;
+    font-size: 15px;
+    a{
+        color: black;
+        text-decoration: underline;
+    }
+}
