--- a/src/app/components/common/form/form.scss
+++ b/src/app/components/common/form/form.scss
@@ -15,3 +15,15 @@
         border: 1px solid rgba(127, 127, 127, 0.5);
     }
 }
+
+
+select, textarea{
+    padding: 5px;
+    border: 1px solid rgba(127, 127, 127, 0.5)
+}
+
+textarea{
+    max-width: 100%;
+    min-height: 100px;
+}
+
